# oxide

./: Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: cache.rs  main.rs  paths.rs
src/cli/: commands.rs  mod.rs
src/prompts/: mod.rs  variables.rs
src/templates/: generator.rs  install.rs  loader.rs  mod.rs
src/utils/: fs.rs  git.rs  mod.rs  setup.rs  validate.rs
templates/js/rsbuild/lit/: package.json
templates/js/rsbuild/preact/: package.json
templates/js/rsbuild/react/: package.json
templates/js/rsbuild/solid/: package.json
templates/js/rsbuild/vue/: package.json
templates/js/vite/lit/: index.html  package.json
templates/js/vite/preact/: package.json
templates/js/vite/qwik/: package.json
templates/js/vite/react-rc/: package.json
templates/js/vite/react-swc/: package.json
templates/js/vite/react/compilater/: index.html
templates/js/vite/solid/: package.json
templates/ts/angular/analog/: package.json
templates/ts/farm/lit/: package.json
templates/ts/farm/nest/: package.json
templates/ts/farm/preact/: package.json
templates/ts/farm/react/: package.json
templates/ts/farm/solid/: package.json
templates/ts/farm/svelte/: package.json
templates/ts/farm/vue/: package.json
templates/ts/nest/fastify/: package.json
templates/ts/next/: package.json
templates/ts/rsbuild/lit/: package.json
templates/ts/rsbuild/preact/: package.json
templates/ts/rsbuild/react/: package.json
templates/ts/rsbuild/solid/: package.json
templates/ts/rsbuild/svelte/: package.json
templates/ts/rsbuild/vue/: package.json
templates/ts/vite/lit/: package.json
templates/ts/vite/preact/: package.json
templates/ts/vite/qwik/: index.html  package.json
templates/ts/vite/react-rc/: index.html
templates/ts/vite/react-swc/: package.json
templates/ts/vite/svelte/: package.json
(+50 files in other folders)
